<resources>
    <string name="app_name">Ki2</string>

    <!-- Preferences -->

    <string name="category_preference_switches">Switches</string>
    <string name="category_preference_left_switch">Left Switch</string>
    <string name="category_preference_right_switch">Right Switch</string>
    <string name="category_preference_pre_load">Pre load</string>
    <string name="category_preference_battery">Battery</string>
    <string name="category_preference_battery_notification">Battery Notification</string>
    <string name="category_preference_update">Update</string>
    <string name="category_preference_audio_alerts">Audio Alerts</string>
    <string name="category_preference_general_settings">General Settings</string>
    
    <string name="title_preference_left_single_press">Left Single Press</string>
    <string name="title_preference_left_double_press">Left Double Press</string>
    <string name="title_preference_left_hold">Left Hold</string>
    <string name="title_preference_right_single_press">Right Single Press</string>
    <string name="title_preference_right_double_press">Right Double Press</string>
    <string name="title_preference_right_hold">Right Hold</string>
    <string name="title_preference_pre_load">Pre load ride application</string>
    <string name="title_preference_battery_level_low">Battery low</string>
    <string name="title_preference_battery_level_critical">Battery critical</string>
    <string name="title_preference_auto_update">Auto update</string>
    <string name="title_preference_audio_alert_lowest_gear">Lowest Gear</string>
    <string name="title_preference_audio_alert_highest_gear">Highest Gear</string>
    <string name="title_preference_audio_alert_shifting_limit">Shifting Limit</string>
    <string name="title_preference_audio_alert_upcoming_synchro_shift">Upcoming Synchro Shift</string>

    <string name="summary_preference_pre_load">Pre load the ride application to avoid data elements not showing after startup</string>
    <string name="summary_preference_battery_notification">Show notifications when the shifting battery level is at or below a certain value</string>
    <string name="summary_preference_auto_update">Automatically check for application updates</string>
    <string name="summary_preference_audio_alert_lowest_gear">Audio alert when shifting to the lowest gear</string>
    <string name="summary_preference_audio_alert_highest_gear">Audio alert when shifting to the highest gear</string>
    <string name="summary_preference_audio_alert_shifting_limit">Audio alert when attempting to shift while already on the gear limit</string>
    <string name="summary_preference_audio_alert_upcoming_synchro_shift">Audio alert when the next shift can trigger a synchronized shift (on S2 mode)</string>

    <string name="default_preference_left_switch_single_press">navigate_left</string>
    <string name="default_preference_left_switch_double_press">lap_map_back</string>
    <string name="default_preference_left_switch_hold">map_graph_zoom_out</string>
    <string name="default_preference_right_switch_single_press">navigate_right</string>
    <string name="default_preference_right_switch_double_press">pause_resume_confirm</string>
    <string name="default_preference_right_switch_hold">map_graph_zoom_in</string>
    <string name="default_preference_battery_level_low">20</string>
    <string name="default_preference_battery_level_critical">10</string>
    <string name="default_preference_auto_update">true</string>
    <string name="default_preference_audio_alert">false</string>
    <string name="default_preference_pre_load">true</string>

    <string name="value_preference_battery_level_off">off</string>

    <string name="preference_left_switch_single_press">LEFT_SWITCH_SINGLE_PRESS</string>
    <string name="preference_left_switch_double_press">LEFT_SWITCH_DOUBLE_PRESS</string>
    <string name="preference_left_switch_hold">LEFT_SWITCH_HOLD</string>
    <string name="preference_right_switch_single_press">RIGHT_SWITCH_SINGLE_PRESS</string>
    <string name="preference_right_switch_double_press">RIGHT_SWITCH_DOUBLE_PRESS</string>
    <string name="preference_right_switch_hold">RIGHT_SWITCH_HOLD</string>
    <string name="preference_pre_load">PRE_LOAD</string>
    <string name="preference_battery_level_low">BATTERY_LEVEL_LOW</string>
    <string name="preference_battery_level_critical">BATTERY_LEVEL_CRITICAL</string>
    <string name="preference_auto_update">AUTO_UPDATE</string>
    <string name="preference_audio_alert_lowest_gear">AUDIO_ALERT_LOWEST_GEAR</string>
    <string name="preference_audio_alert_highest_gear">AUDIO_ALERT_HIGHEST_GEAR</string>
    <string name="preference_audio_alert_shifting_limit">AUDIO_ALERT_SHIFTING_LIMIT</string>
    <string name="preference_audio_alert_upcoming_synchro_shift">AUDIO_ALERT_UPCOMING_SYNCHRO_SHIFT</string>

    <!-- General -->

    <string name="text_main_message">Di2 back to Karoo</string>
    <string name="text_param_found_devices">Found %d device(s)</string>
    <string name="text_searching_for_devices">Searching for devices…</string>
    <string name="text_unable_to_scan_devices">Unable to search for devices</string>
    <string name="text_no_devices_found">No devices found</string>
    <string name="text_search_for_devices">Search for devices</string>
    <string name="text_param_di2_name">Di2 %s</string>
    <string name="text_param_sensor_name">Sensor %s</string>
    <string name="text_add">Add</string>
    <string name="text_sensor">Sensor</string>
    <string name="text_back">Back</string>
    <string name="text_saved_device">Saved device</string>
    <string name="text_unable_to_save_device">Unable to save device</string>
    <string name="text_service_disconnected">Service disconnected</string>
    <string name="text_unable_to_communicate_with_service">Unable to communicate with service</string>
    <string name="text_add_device">Add device</string>
    <string name="text_no_devices_saved">No devices saved</string>
    <string name="text_connecting">Connecting…</string>
    <string name="text_connected">Connected</string>
    <string name="text_not_found">Not found</string>
    <string name="text_failed">Failed</string>
    <string name="text_devices">Devices</string>
    <string name="text_settings">Settings</string>
    <string name="text_remove">Remove</string>
    <string name="text_param_question_remove">Remove %s?</string>
    <string name="text_unable_to_remove">Unable to remove</string>
    <string name="text_signal">Signal</string>
    <string name="text_connection_status">Connection Status</string>
    <string name="text_battery">Battery</string>
    <string name="text_manufacturer">Manufacturer</string>
    <string name="text_serial_number">Serial Number</string>
    <string name="text_model">Model</string>
    <string name="text_software_version">SW Version</string>
    <string name="text_hardware_version">HW Version</string>
    <string name="text_rear_gear">Rear Gear</string>
    <string name="text_front_gear">Front gear</string>
    <string name="text_shifting_mode">Shifting Mode</string>
    <string name="text_change_mode">Change Mode</string>
    <string name="text_left_switch">Left Switch</string>
    <string name="text_right_switch">Right Switch</string>
    <string name="text_waiting_for_data">Waiting for data…</string>
    <string name="text_reconnect">Reconnect</string>
    <string name="text_param_percentage">%d%%</string>
    <string name="text_unable_to_connect">Unable to connect</string>
    <string name="text_unable_to_change_shifting_mode">Unable to change shifting mode</string>
    <string name="text_no_action">No Action</string>
    <string name="text_single_press">Single Press</string>
    <string name="text_double_press">Double Press</string>
    <string name="text_holding">Holding</string>
    <string name="text_na">N/A</string>
    <string name="text_waiting_for_state">Waiting for state…</string>
    <string name="text_param_dbm">%d dBm</string>
    <string name="text_dismiss">Dismiss</string>
    <string name="text_param_di2_low_battery">Battery of Di2 %s at %d%%</string>
    <string name="text_di2_low_battery">Di2 low battery</string>
    <string name="text_update_complete">Update complete</string>
    <string name="text_report_problems">Report problems at:\nhttps://github.com/valterc/ki2</string>
    <string name="text_check_for_updates">Check for updates</string>
    <string name="text_on_latest_version">You have the latest version available.</string>
    <string name="text_unable_to_update">Unable to update.</string>
    <string name="text_header_error_prefix">Error:</string>
    <string name="text_updating">Updating…</string>
    <string name="text_update_accept_prompts">Please <b>accept the permissions and package install</b> when prompted by the system.\n\nDuring the update <b>the app will close and restart a few seconds later</b>.</string>
    <string name="text_update_available">Update available</string>
    <string name="text_update_ki2">Update Ki2</string>
    <string name="text_header_new_version">New version:</string>
    <string name="text_header_details">Details:</string>
    <string name="text_header_release_date">Release date:</string>
    <string name="text_checking_for_updates">Checking for updates…</string>
    <string name="text_header_current_version">Current version:</string>
    <string name="text_update">Update</string>
    <string name="text_update_error_permissions">Permission not granted. You need to allow Ki2 to install unknown apps.</string>
    <string name="text_param_update_available_version">Update available for Ki2, version %s.</string>
    <string name="text_update_tutorial_2">Enable <b>Allow from this source</b> for Ki2 to be able to install the update.</string>
    <string name="text_update_tutorial_1">When prompted by the system, press <b>Settings</b> and enable app installation. This is required for the app update.</string>
    <string name="text_update_tutorial_3">After enabling <b>Allow from this source</b>, press the left bottom Karoo button to return to the update installation.</string>
    <string name="text_update_tutorial_4">Press the <b>Install</b> button, the app will close and Ki2 will start after a few seconds.</string>
    <string name="text_update_tutorial">Update tutorial</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_next">Next</string>
    <string name="text_start_update">Start update</string>
    <string name="text_update_restart">Please <b>restart Karoo</b> before riding.</string>

</resources>