<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    app:title="@string/category_preference_switches">

    <PreferenceCategory app:title="@string/category_preference_switches">

        <PreferenceCategory app:title="@string/category_preference_left_switch">

            <ListPreference
                app:defaultValue="@string/default_preference_left_switch_single_press"
                app:entries="@array/preference_titles_switch_single_press_action"
                app:entryValues="@array/preference_values_switch_single_press_action"
                app:key="@string/preference_left_switch_single_press"
                app:title="@string/title_preference_left_single_press"
                app:useSimpleSummaryProvider="true" />

            <ListPreference
                app:defaultValue="@string/default_preference_left_switch_double_press"
                app:entries="@array/preference_titles_switch_double_press_action"
                app:entryValues="@array/preference_values_switch_double_press_action"
                app:key="@string/preference_left_switch_double_press"
                app:title="@string/title_preference_left_double_press"
                app:useSimpleSummaryProvider="true" />

            <ListPreference
                app:defaultValue="@string/default_preference_left_switch_hold"
                app:entries="@array/preference_titles_switch_hold_action"
                app:entryValues="@array/preference_values_switch_hold_action"
                app:key="@string/preference_left_switch_hold"
                app:title="@string/title_preference_left_hold"
                app:useSimpleSummaryProvider="true" />

        </PreferenceCategory>

        <PreferenceCategory app:title="@string/category_preference_right_switch">

            <ListPreference
                app:defaultValue="@string/default_preference_right_switch_single_press"
                app:entries="@array/preference_titles_switch_single_press_action"
                app:entryValues="@array/preference_values_switch_single_press_action"
                app:key="@string/preference_right_switch_single_press"
                app:title="@string/title_preference_right_single_press"
                app:useSimpleSummaryProvider="true" />

            <ListPreference
                app:defaultValue="@string/default_preference_right_switch_double_press"
                app:entries="@array/preference_titles_switch_double_press_action"
                app:entryValues="@array/preference_values_switch_double_press_action"
                app:key="@string/preference_right_switch_double_press"
                app:title="@string/title_preference_right_double_press"
                app:useSimpleSummaryProvider="true" />

            <ListPreference
                app:defaultValue="@string/default_preference_right_switch_hold"
                app:entries="@array/preference_titles_switch_hold_action"
                app:entryValues="@array/preference_values_switch_hold_action"
                app:key="@string/preference_right_switch_hold"
                app:title="@string/title_preference_right_hold"
                app:useSimpleSummaryProvider="true" />

        </PreferenceCategory>

    </PreferenceCategory>

</PreferenceScreen>