<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        app:fragment="com.valterc.ki2.fragments.settings.SwitchesSettingsFragment"
        app:icon="@drawable/ic_press"
        app:title="@string/category_preference_switches" />

    <Preference
        app:fragment="com.valterc.ki2.fragments.settings.BatterySettingsFragment"
        app:icon="@drawable/ic_battery_5"
        app:title="@string/category_preference_battery" />

    <Preference
        app:fragment="com.valterc.ki2.fragments.settings.AudioAlertsSettingsFragment"
        app:icon="@drawable/ic_audio_alert"
        app:title="@string/category_preference_audio_alerts" />

    <Preference
        app:fragment="com.valterc.ki2.fragments.settings.UpdateSettingsFragment"
        app:icon="@drawable/ic_update"
        app:title="@string/category_preference_update" />

    <Preference
        app:fragment="com.valterc.ki2.fragments.settings.GeneralSettingsFragment"
        app:icon="@drawable/ic_configure"
        app:title="@string/category_preference_general_settings" />

</PreferenceScreen>