<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="20dp"
    tools:context=".fragments.update.UpdateFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="34sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/text_update"
            android:textColor="@color/hh_grey"
            android:textSize="34sp" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingBottom="80dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_header_current_version" />

                    <TextView
                        android:id="@+id/textview_update_current_version"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="5dp"
                        android:textStyle="bold"
                        tools:text="0.1" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearlayout_update_new_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_header_new_version" />

                    <TextView
                        android:id="@+id/textview_update_new_version"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="5dp"
                        android:textStyle="bold"
                        tools:text="0.1" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearlayout_update_checking_for_updates"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:orientation="vertical"
                android:visibility="gone">

                <com.google.android.material.progressindicator.CircularProgressIndicator
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:indeterminate="true"
                    android:paddingVertical="10dp"
                    app:indicatorColor="?colorSecondary"
                    app:indicatorSize="36dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/text_checking_for_updates"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearlayout_update_available"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_update_available"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/button_update"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="10dp"
                    android:backgroundTint="@color/hh_light_blue"
                    android:contentDescription="@string/text_update_ki2"
                    android:text="@string/text_update_ki2"
                    app:icon="@drawable/ic_update" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_header_new_version" />

                    <TextView
                        android:id="@+id/textview_update_available_new_version"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="5dp"
                        android:textStyle="bold"
                        tools:text="0.1" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_header_release_date" />

                    <TextView
                        android:id="@+id/textview_update_release_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="5dp"
                        android:textStyle="bold"
                        tools:text="2022/12/31" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_header_details" />

                    <TextView
                        android:id="@+id/textview_update_release_details"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white_100"
                        android:scrollbars="vertical"
                        android:scrollHorizontally="false"
                        tools:text="2022/12/31" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearlayout_update_updating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:orientation="vertical"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_updating"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textview_update_progress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        tools:text="33%" />

                </LinearLayout>

                <com.google.android.material.progressindicator.LinearProgressIndicator
                    android:id="@+id/linearprogressindicator_update_progress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:indeterminate="false"
                    android:max="100"
                    android:paddingVertical="10dp"
                    android:progress="33"
                    app:indicatorColor="@color/hh_dark_blue"
                    app:trackColor="@color/hh_grey" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:text="@string/text_update_accept_prompts"
                    android:textColor="@color/hh_faded_gray" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearlayout_update_check_for_updates"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:orientation="vertical"
                android:visibility="visible">

                <Button
                    android:id="@+id/button_update_check_for_updates"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/hh_light_blue"
                    android:contentDescription="@string/text_check_for_updates"
                    android:text="@string/text_check_for_updates"
                    app:icon="@drawable/ic_update" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearlayout_update_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:drawablePadding="15dp"
                    android:text="@string/text_unable_to_update"
                    android:textStyle="bold"
                    app:drawableStartCompat="@drawable/ic_close" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/text_header_error_prefix" />

                    <TextView
                        android:id="@+id/textview_update_error"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        tools:text="File not found" />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_report_problems"
                    android:textColor="@color/hh_faded_gray"
                    android:textSize="13sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearlayout_update_not_available"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:drawablePadding="15dp"
                    android:text="@string/text_on_latest_version"
                    android:textStyle="bold"
                    app:drawableStartCompat="@drawable/ic_check" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_report_problems"
                    android:textColor="@color/hh_faded_gray"
                    android:textSize="13sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearlayout_update_complete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:drawablePadding="15dp"
                    android:text="@string/text_update_complete"
                    android:textStyle="bold"
                    app:drawableStartCompat="@drawable/ic_check"
                    app:drawableTint="@color/hh_green"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_report_problems"
                    android:textColor="@color/hh_faded_gray"
                    android:textSize="13sp" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>


</LinearLayout>